--- a/dvc.yaml
+++ b/dvc.yaml
@@ -7,3 +7,14 @@ stages:
     params:
       - config/config.yaml:
         - data_ingestion
+  data_validation:
+    cmd: py -m src.repoRatePred.pipeline.stage_02_data_validation_pipeline
+    deps:
+      - src/repoRatePred/pipeline/stage_02_data_validation_pipeline.py
+      - src/repoRatePred/components/data_validation.py
+    params:
+      - config/config.yaml:
+        - data_validation
+      - schema.yaml:
+    outs:
+      - artifacts/data_validation/status.txt
